# Multi-agent-Research-agent

./: .gitignore  api.py  graph.py  main.py  pyproject.toml  requirements.txt  state.py
agents/: aggregator.py  coordinator.py  docs_agent.py  math_agent.py  web_agent.py
frontend/: .env.example
frontend/src/: ApiKeyModal.jsx  App.css  App.jsx  apiKeys.js
tools/: calculator.py  pdf_retriever.py  search.py
